CODE-2 - Added Paging
- Added JPA Specification for filtering
- Refactored BookState to be an Enum
- Up-issued version